--- a/.gitignore
+++ b/.gitignore
@@ -2,53 +2,28 @@
 __pycache__/
 *.py[cod]
 *$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
+*.pyc
+*.pyo
 *.egg-info/
-.installed.cfg
-*.egg
+build/
+dist/
 
-# Virtual environments
-venv/
-env/
-ENV/
+# Demo/test data
+demo_data/
+sample_data/
+example_data/
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Data directories
-mimic-cxr*/
+# Data files
 data/
 *.csv
 *.jpg
 *.png
 *.dcm
 
-# Logs
-*.log
-
-# Temporary files
-*.tmp
-*.temp
+# IDE
+.vscode/
+.idea/
 
 # OS
 .DS_Store
 Thumbs.db
-
-# Large repos that shouldn't be included
-LLaVA/
